--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,9 @@
-# development:
-#   adapter: mysql2
-#   encoding: utf8
-#   database: angrail1_development
-#   username: root
-#   password: razm
-#   host: localhost
+development:
+  adapter: mysql2
+  encoding: utf8
+  database: angrail1_development
+  username: root
+  password: razm
+  host: localhost
 
 
